--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-This is a html page by aziz.
-this is the second commit.
-this is the third commit.
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Simple CI/CD Pipeline</title>
+</head>
+<body>
+    <h1>This is a Simple HTML Project By  Ajfar Aziz!!!!</h1>
+</body>
+</html>
